--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -32,6 +32,7 @@ jobs:
   
   node-installation-job:
    runs-on: ubuntu-latest
+   needs: [hello-world-job]
    steps:
      - name: Node JS version check
        run: node --version
