--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -42,3 +42,16 @@ jobs:
          node-version: '22.21.0' # declaring node version we want. See action documentation
      - name: Node JS version check after update
        run: node --version
+
+  CI:
+    runs-on: ubuntu-latest
+    steps:
+    
+    - name: Obtaining code
+      uses: actions/checkout@4.1.5 # when the workflow file is in the same directory of the code, the definition of code path isn't needed
+    
+    - name: Logging in to Docker
+      uses: docker/login-action@v3.1.0
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
