--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -48,7 +48,7 @@ jobs:
     steps:
     
     - name: Obtaining code
-      uses: actions/checkout@5 # when the workflow file is in the same directory of the code, the definition of code path isn't needed
+      uses: actions/checkout@v5 # when the workflow file is in the same directory of the code, the definition of code path isn't needed
     
     - name: Logging in to Docker
       uses: docker/login-action@v3.1.0
