--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -62,4 +62,6 @@ jobs:
         context: ./git/day-02 # the directory you're working with
         file: ./git/day-02/Dockerfile # Dockerfile path
         push: true # to automatically push image to Hub. Default is false
-        tags: thiagoduran/github-actions-test
+        tags: |
+          thiagoduran/github-actions-test:v${{ github.run_number }} # ensures version number incrementation
+          thiagoduran/github-actions-test:latest # ensures push of tag latest (best practice)
