--- a/git/day-02/Dockerfile
+++ b/git/day-02/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.22.0-alpine3.19 as builder
+FROM golang:1.22.2-alpine3.19 AS builder
 WORKDIR /build 
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -a -o app 
