--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -51,7 +51,7 @@ jobs:
       uses: actions/checkout@v5 # when the workflow file is in the same directory of the code, the definition of code path isn't needed
     
     - name: Setup Go environment
-      uses: action/setup-go@v5 # ensures correct go version
+      uses: actions/setup-go@v5 # ensures correct go version
       with:
         go-version: '1.22.x'
     
