--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -99,7 +99,7 @@ jobs:
       uses: Azure/k8s-deploy@v5 # action to deploy app with k8s
       with:
         manifests: |
-          ./k8s/deployment.yaml
+          ./git/day-03/k8s/deployment.yaml
         images: |
           thiagoduran/github-actions-test:v${{ github.run_number }}  
         # must match image set in k8s yaml
