--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -9,39 +9,39 @@ on:
   workflow_dispatch: # allows to run workflow manually
 
 jobs:
-  # defines the job name
-  hello-world-job:
-    # defines the runner. It's needed after every job name
-    runs-on: ubuntu-latest
+  # # defines the job name
+  # hello-world-job:
+  #   # defines the runner. It's needed after every job name
+  #   runs-on: ubuntu-latest
 
-    # defines the job steps
-    steps:
-      - name: Display Hello World
-        run: echo "Hello World!"
+  #   # defines the job steps
+  #   steps:
+  #     - name: Display Hello World
+  #       run: echo "Hello World!"
 
-      - name: Second action
-        run: | # allows several commands in a single action
-          echo "You created a worflow"
-          echo "Congrats!"
+  #     - name: Second action
+  #       run: | # allows several commands in a single action
+  #         echo "You created a worflow"
+  #         echo "Congrats!"
 
-      - name: Script Python
-        run: |
-          var = "Hi there"
-          print(var)
-        shell: python # allow to run python scripts
+  #     - name: Script Python
+  #       run: |
+  #         var = "Hi there"
+  #         print(var)
+  #       shell: python # allow to run python scripts
   
-  node-installation-job:
-   runs-on: ubuntu-latest
-   needs: [hello-world-job] # defines job dependency
-   steps:
-     - name: Node JS version check
-       run: node --version
-     - name: Newest version installation
-       uses: actions/setup-node@v6 # instead of running commands, we can call an action
-       with:
-         node-version: '22.21.0' # declaring node version we want. See action documentation
-     - name: Node JS version check after update
-       run: node --version
+  # node-installation-job:
+  #  runs-on: ubuntu-latest
+  #  needs: [hello-world-job] # defines job dependency
+  #  steps:
+  #    - name: Node JS version check
+  #      run: node --version
+  #    - name: Newest version installation
+  #      uses: actions/setup-node@v6 # instead of running commands, we can call an action
+  #      with:
+  #        node-version: '22.21.0' # declaring node version we want. See action documentation
+  #    - name: Node JS version check after update
+  #      run: node --version
 
   CI:
     runs-on: ubuntu-latest
